restructure process flow